# iptables-manager

./: .gitignore  README.md  pyproject.toml
iptables_manager/: parser.py  utils.py
iptables_manager/models/: __init__.py  chain.py  rule.py  table.py
